# c3d_python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_wheels.yml  prebuild.sh  prebuild_win.bash  prebuild_win.bat
src/: ConvertPythonBindings.cxx
