CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(PICSL_C3D)

# Enable languages
ENABLE_LANGUAGE(CXX)

# Specify the C++ standard
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

# Find ITK and C3D
FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})

FIND_PACKAGE(Convert3D REQUIRED)
message(STATUS "Including ${Convert3D_INCLUDE_DIRS}")

# Python bindings
SET(PYBIND11_FINDPYTHON ON)
ADD_SUBDIRECTORY(external/pybind11)
INCLUDE_DIRECTORIES(external/pybind11)
pybind11_add_module(picsl_c3d src/ConvertPythonBindings.cxx)
TARGET_INCLUDE_DIRECTORIES(picsl_c3d PRIVATE ${Convert3D_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(picsl_c3d PUBLIC ${ITK_LIBRARIES} cnd_api)
install(TARGETS picsl_c3d DESTINATION .)